# OpenCVDemo

./: .gitignore  README.md  build.gradle  import-summary.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/org/lynxz/opencvwrapper/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/org/lynxz/opencvdemo/: MainActivity.kt
app/src/main/java/org/lynxz/opencvwrapper/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/org/lynxz/opencvwrapper/: ExampleUnitTest.kt
config/: dependencies.gradle
gradle/wrapper/: gradle-wrapper.properties
opencv_lib/: build.gradle
opencv_lib/src/main/cpp/: CMakeLists.txt  bitmap_utils.cpp  bitmap_utils.h  native-lib.cpp
opencv_lib/src/main/cpp/include/opencv2/dnn/: dnn.hpp
opencv_lib/src/main/java/org/lynxz/opencvwrapper/: OpenCVWrapper.kt
